Fixed the flexbox wrap issue on the portfolio

--- a/React-Portfolio/src/assets/css/project.css
+++ b/React-Portfolio/src/assets/css/project.css
@@ -1,16 +1,4 @@
-.project-image {
+/* .project-image {
     width: 700px; 
     height: auto;
- }
-
-.card-title, .card-text {
-    margin-left: 750px;
-}
-
-.github-icon {
-    position: absolute;
-    right: 14rem; 
-    bottom: 2rem; 
-    color: white;
-    text-decoration: none;
-}
+ } */
